Fix for banner on firefox browser

--- a/dpsite/static/css/style.css
+++ b/dpsite/static/css/style.css
@@ -4674,6 +4674,7 @@ tbody.collapse.show {
 }
 
 .navbar-brand {
+    width: 100%;
     display: inline-block;
     padding-top: 0.3125rem;
     padding-bottom: 0.3125rem;
